// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test GifGrid component shold display item when download images 1`] = `
<Fragment>
  <h3
    className="animate__animated animate__fadeIn"
  >
    Rick and Morty
  </h3>
  <div
    className="card-grid"
  >
    <GifGridItem
      id="ABC"
      key="ABC"
      title="anything"
      url="https://localhost/asd"
    />
  </div>
</Fragment>
`;

exports[`Test GifGrid component should display component correctly 1`] = `
<Fragment>
  <h3
    className="animate__animated animate__fadeIn"
  >
    Rick and Morty
  </h3>
  <p
    className="animate__animated animate__flash"
  >
    Loading...
  </p>
  <div
    className="card-grid"
  />
</Fragment>
`;
